# protobuf-base

./: README.md
cc/: BUILD  Makefile  WORKSPACE  bazel-bin  bazel-cc  bazel-out  bazel-testlogs
cc/protos/proto3/: agent.pb.cc  agent.pb.h  switch_config.pb.cc  switch_config.pb.h  switch_parcel.pb.cc  switch_parcel.pb.h
cc/src/: create_pb.cpp  read_pb.cpp
csharp/protos/: Agent.cs
data/: weights.pb  weights2.pb  weights31.pb
examples/quotes_app/: ConfiguratorBundle.proto  ConfiguratorBundle_pb2.py  create_sample.py  csharp_out.pb  flutter_out.pb  main.py  sales_input.json
examples/quotes_app/csharp/: ConfiguratorBundle.cs
examples/quotes_app/data/: configurator_bundle.in
examples/quotes_app/python/: ConfiguratorBundle_pb2.py
flutter_dart/: pubspec.yaml
flutter_dart/protos/proto3/: agent.pb.dart  agent.pbenum.dart  agent.pbjson.dart  agent.pbserver.dart
php/protos/: Weights.php
php/protos/GPBMetadata/Proto3/: Agent.php
proto3/: agent.proto  base1.proto  switch_config.proto  switch_parcel.proto
py/protos/proto3/: agent_pb2.py
py/src/: agent_pb2.py  read_pb.py  write_pb.py
rs/: Cargo.toml
rs/protoc-rust-cli/: Cargo.toml
rs/protoc-rust-cli/src/: main.rs
rs/protos/: agent.rs  mod.rs  switch_config.rs
rs/rust-if/: Cargo.toml
rs/rust-if/src/: main.rs
rs/src/: main.rs
