[package]
name = "rust-protobuf"
version = "0.1.0"
authors = ["I. Cirauqui <icirauqui@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"
fsio = "0.1.2"
chrono = "0.4.11"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
