[package]
name = "rust-if"
version = "0.1.0"
authors = ["I. Cirauqui <icirauqui@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2.0"
fsio = "0.4.0"
chrono = "0.4.23"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-rust = "2.28.0"
